Changed target to winexe

--- a/avg_osu_skins.csproj
+++ b/avg_osu_skins.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>winExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>avg_osu_skins</RootNamespace>
     <UseWPF>true</UseWPF>
